# imgstream

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
cmake/: TestLib.cmake
include/imgstream/: imgstream.h  monoostream.h  pngstream.h
src/: imgstream.cc
test/: monostream_test.cc  pngstream_test.cc
